# ustr

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  _config.yml  index.md
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
example/: colors.hpp
examples/: colors.hpp  simple.cpp
include/ustr/: check.hpp  manipulate.hpp  ustr.hpp  utility.hpp  version.hpp
tests/: test_all.cpp  test_check.cpp  test_manipulation.cpp
